[package]
name = "msrx-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
hex = "0.4.3"
rusb = "0.9.3"
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }
